# iopy

./: .gitignore  iopy.py  iopy_alt.py  pyproject.toml
iopy/: query.py  query_alt.py  search.py
